--- a/Specifikacija Proizvoda.html
+++ b/Specifikacija Proizvoda.html
@@ -39,10 +39,10 @@
    <td>30 €</td>
  </tr>
  <tr>
-   <td colspan="3"><strong>Total</strong></td>
-   <td>103€</td>
+   <td colspan="3"><b>Total</b></td>
+   <td><b>103€</b></td>
  </tr>
 </table>
 </body>
-
+ 
 </html>
